# hk-smart-home-axum

./: .gitignore  README.md
auth-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
auth-service/entity/: Cargo.toml
auth-service/entity/src/: access_tokens.rs  attempt_logins.rs  banned_logins.rs  failed_logins.rs  mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  system_configs.rs  user_roles.rs  users.rs
auth-service/migration/: Cargo.toml
auth-service/migration/src/: lib.rs  m20250420_030008_users.rs  m20250420_030033_access_tokens.rs  m20250502_130004_roles.rs  m20250502_131410_permissions.rs  m20250504_221124_role_permissions.rs  m20250505_061040_user_roles.rs  m20250505_061041_seed_role_permission.rs  m20250505_161056_seed_create_admin.rs  m20250519_022040_attempt_logins.rs  m20250519_022053_failed_logins.rs  m20250519_023508_banned_logins.rs  m20250519_142643_system_configs.rs  m20250519_142758_seed_create_system_config.rs
auth-service/src/: main.rs
auth-service/src/config/: application_config.rs
auth-service/src/controllers/: auth_controller.rs
auth-service/src/core/: mod.rs
auth-service/src/databases/: mod.rs
auth-service/src/middlewares/: guard_middleware.rs  handle_error_middleware.rs  log_middleware.rs  mod.rs
auth-service/src/repositories/: access_token_repository.rs  attempt_login_repository.rs  banned_login_repository.rs  failed_login_repository.rs  mod.rs  redis_repository.rs  role_permission_repository.rs  user_repository.rs
auth-service/src/services/: auth_service.rs  mod.rs  redis_service.rs
(+17 files in other folders)
