[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
strum = { version = "0.27.1", features = ["derive"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
bcrypt = "0.17.0"
tokio = { version = "1.44.2", features = ["full"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
